--- a/coin_contract/Move.toml
+++ b/coin_contract/Move.toml
@@ -1,6 +1,6 @@
 [package]
-name = "we_hate_the_ui_contracts"
-edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
+name = "higan_fun"
+edition = "2024.alpha" # edition = "legacy" to use legacy (pre-2024) Move
 # license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
 # authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
@@ -19,7 +19,7 @@ Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-fram
 # Override = { local = "../conflicting/version", override = true }
 
 [addresses]
-we_hate_the_ui_contracts = "0x0"
+higan_fun = "0x0"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
